--- a/WebTool/viewer.css
+++ b/WebTool/viewer.css
@@ -10,12 +10,12 @@
 
 .tree-node::before {
     content: "▶";
-    margin-right: 5px;
+    margin-right: 4px;
     color: #007bff;
 }
 
-.tree-node.collapsed::before {
-    content: "▼";
+.tree-node.tree-node-no-children::before {
+    content: "◯";
 }
 
 .tree ul {
@@ -41,11 +41,11 @@
     font-weight: bold;
 }
 
-/* Tooltip Styling */
+/* Tree Tooltip Styling */
 .tree-tooltip {
     position: fixed;
-    background-color: rgba(25, 9, 37, 0.635);
-    color: white;
+    background-color: rgba(15, 9, 31, 0.746);
+    color: gold;
     padding: 8px 12px; /* Increased padding for better spacing */
     border-radius: 6px; /* Slightly rounded corners */
     font-size: 14px;
@@ -62,6 +62,7 @@
 .tree-node:hover {
     cursor: pointer;
 }
+  
 
 .viewer-content {
     padding: 6px;
