--- a/WebTool/styles.css
+++ b/WebTool/styles.css
@@ -87,6 +87,11 @@ tr:nth-child(odd) {
     background-color: #26263e;
 }
 
+/* Remove default icon from jQuery UI or Bootstrap */
+.ui-icon {
+    background-image: none !important;
+  }
+  
 /* Autocomplete dropdown styling */
 .ui-autocomplete {
     background-color: #2e2e48;
@@ -275,3 +280,4 @@ form.base {
     margin-bottom: 10px;
     color: #007bff;
 }
+
