--- a/WebTool/styles.css
+++ b/WebTool/styles.css
@@ -196,9 +196,7 @@ form.base {
     margin-right: auto;
     margin-top: 4px;
     margin-bottom: 4px;
-    border-style: solid;
-    border-width: 2px;
-    background-color: #2b2b3f;
+    background-color: #2b2b3f23;
     text-align: left;
     font-size: smaller;
     padding: 8px;
@@ -280,4 +278,34 @@ form.base {
     margin-bottom: 10px;
     color: #007bff;
 }
+
+
+.expandable {
+    width: 100%;
+    /* Default width before toggle */
+    box-sizing: border-box;
+    /* Ensure padding doesn’t break layout */
+}
+
+#viewerContent,
+#sheetJSView {
+    padding: 10px;
+    /* adds breathing room */
+}
+
+/* Style scrollbars for better UX */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 
